[package]
name = "mini-dropbox-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
reqwest = "0.12.24"
rfd = "0.16.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
tokio-tungstenite = "*"
anyhow = "1.0.100"
serde_json = "1.0.145"
names = { version = "0.14.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
egui-toast = "0.19.1"
